--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,11 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 body {
-  background: #2d3b36 url(http://www.luismruiz.com/img/blured.jpg) no-repeat
+  background: #1289d8 url(http://www.luismruiz.com/img/blured.jpg) no-repeat
     center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
   padding-top: 100px;
 }
 
@@ -16,15 +12,9 @@ form {
   height: 480px;
   padding: 30px;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
   border-radius: 5px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
   background-clip: padding-box;
   background: rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 0 13px 3px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 0 0 13px 3px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 13px 3px rgba(0, 0, 0, 0.5);
   overflow: hidden;
 }
@@ -35,11 +25,7 @@ textarea {
   width: 276px;
   height: 110px;
   border: 1px solid rgba(255, 255, 255, 0.6);
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
   border-radius: 4px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
   background-clip: padding-box;
   display: block;
   font-family: "Source Sans Pro", sans-serif;
@@ -56,11 +42,7 @@ input {
   width: 276px;
   height: 48px;
   border: 1px solid rgba(255, 255, 255, 0.4);
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
   border-radius: 4px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
   background-clip: padding-box;
   display: block;
   font-family: "Source Sans Pro", sans-serif;
@@ -112,8 +94,6 @@ input.message {
 input:focus,
 textarea:focus {
   background-color: rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 0 5px 1px rgba(255, 255, 255, 0.5);
-  -webkit-box-shadow: 0 0 5px 1px rgba(255, 255, 255, 0.5);
   box-shadow: 0 0 5px 1px rgba(255, 255, 255, 0.5);
   overflow: hidden;
 }
@@ -134,11 +114,7 @@ textarea:focus {
     from(#6da5a3),
     to(#416b68)
   );
-  background: -webkit-linear-gradient(top, #6da5a3, #416b68);
-  background: -moz-linear-gradient(top, #6da5a3, #416b68);
-  background: -ms-linear-gradient(top, #6da5a3, #416b68);
-  background: -o-linear-gradient(top, #6da5a3, #416b68);
-  background-image: -ms-linear-gradient(top, #6da5a3 0%, #416b68 100%);
+
   padding: 10.5px 21px;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -164,11 +140,6 @@ textarea:focus {
     from(#77b2b0),
     to(#416b68)
   );
-  background: -webkit-linear-gradient(top, #77b2b0, #416b68);
-  background: -moz-linear-gradient(top, #77b2b0, #416b68);
-  background: -ms-linear-gradient(top, #77b2b0, #416b68);
-  background: -o-linear-gradient(top, #77b2b0, #416b68);
-  background-image: -ms-linear-gradient(top, #77b2b0 0%, #416b68 100%);
   color: #fff;
 }
 
@@ -190,14 +161,4 @@ textarea:focus {
   background: -o-linear-gradient(top, #416b68, #6da5a3);
   background-image: -ms-linear-gradient(top, #416b68 0%, #6da5a3 100%);
   color: #fff;
-  -webkit-box-shadow: rgba(255, 255, 255, 0) 0 1px 0,
-    inset rgba(255, 255, 255, 0.7) 0 1px 0;
-  -moz-box-shadow: rgba(255, 255, 255, 0) 0 1px 0,
-    inset rgba(255, 255, 255, 0.7) 0 1px 0;
-  box-shadow: rgba(255, 255, 255, 0) 0 1px 0,
-    inset rgba(255, 255, 255, 0.7) 0 1px 0;
-}
-.btn::before {
-  content: "➤";
-  padding-right: 10px;
 }
